# hnsd

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile.am  README.md  autogen.sh  configure.ac  libhsk.pc.in  openwrt_Makefile
.github/workflows/: docker.yaml  hnsd.yml  libhsk.yaml  memory-sanitizer.yaml  test-windows.yaml  test.yml  update.yaml
cares/: Makefile.am
docs/: hesiod.md
etc/: hnsd.conf  hnsd.service
include/: hsk-addr.h  hsk-addrmgr.h  hsk-aead.h  hsk-brontide.h  hsk-chain.h  hsk-constants.h  hsk-cuckoo.h  hsk-ec.h  hsk-error.h  hsk-hash.h  hsk-header.h  hsk-hsig.h  hsk-list.h  hsk-map.h  hsk-msg.h  hsk-name.h  hsk-proof.h  hsk-random.h  hsk-resource.h  hsk-timedata.h  hsk.h
integration/: package-lock.json  package.json  test-util.js
integration/test/: checkpoints-test.js  config-test.js  hesiod-test.js  sync-resolve-test.js
ldns/lua/: echo.lua
m4/: bitcoin_secp.m4
man/: hnsd.1
scripts/: build-ios.sh  checkpoint.sh
secp256k1/: configure.ac
src/: Makefile.am  addr.c  addr.h  addrmgr.c  addrmgr.h  aead.c  aead.h  b64.c  b64.h  base32.c  base32.h  bio.h  blake2b-impl.h  blake2b.c  blake2b.h  bn.c  bn.h  brontide.c  brontide.h  cache.c  cache.h  chain.c  chain.h  checkpoints.h  config.h.in  constants.h  cuckoo.c  cuckoo.h  daemon.c  dns.c  dns.h  dnssec.c  dnssec.h  ec.c  ec.h  ecc.c  ecc.h  error.c  error.h  genesis.h  (+64 more)
src/chacha20/: chacha20.c  chacha20.h
src/poly1305/: README.md  example-poly1305.c  poly1305-32.h  poly1305-64.h  poly1305-8.h  poly1305-donna-16.h  poly1305-donna-32.h  poly1305-donna-64.h  poly1305-donna-8.h  poly1305-donna.c  poly1305-donna.h  poly1305.c
src/secp256k1/: ecdh_impl.h  ecdsa.h  ecdsa_impl.h  eckey.h  eckey_impl.h  ecmult.h  ecmult_const.h  ecmult_const_impl.h  ecmult_gen.h  ecmult_gen_impl.h  ecmult_impl.h  ecmult_static_context.h  elligator.h  elligator_impl.h  field.h  field_10x26.h  field_10x26_impl.h  field_5x52.h  field_5x52_asm_impl.h  field_5x52_impl.h  field_5x52_int128_impl.h  field_impl.h  group.h  group_impl.h  hash.h  hash_impl.h  num.h  num_impl.h  recovery_impl.h  scalar.h  scalar_4x64.h  scalar_4x64_impl.h  scalar_8x32.h  scalar_8x32_impl.h  scalar_impl.h  scalar_low.h  scalar_low_impl.h  scratch.h  scratch_impl.h  secp256k1.c  (+6 more)
src/secp256k1/asm/: field_10x26_arm.s
test/: base32-test.c  dns-test.c  hnsd-test.c  hnsd-test.h  hsk.c  libhsk-test.c  resource-test.c
test/data/: name_serialization_vectors.h  record_read_vectors.h  resource_vectors.h
test/integration/: hnsd-integration-test.js  package-lock.json  package.json
unbound/util/: configlexer.c
